--- a/otgen/templates/ot_test.go.tmpl
+++ b/otgen/templates/ot_test.go.tmpl
@@ -250,3 +250,82 @@ func Test_idSliceLCS(t *testing.T) {
 		})
 	}
 }
+
+func Test{{.DeltaType}}_Rebase(t *testing.T) {
+	for _, test := range []struct {
+		N            string
+		A, B, Expect {{.DeltaType}}
+	}{
+		{"both empty", nil, nil, nil},
+		{"insert1 vs empty", {{.SliceType}}{}.Insert(0, Test{{.ElementName}}1), nil, nil},
+		{"retain1 vs empty", {{.SliceType}}{}.Retain(1), nil, nil},
+		{"delete1 vs empty", {{.SliceType}}{}.Delete(0, 1), nil, nil},
+		{"empty vs insert1", nil, {{.SliceType}}{}.Insert(0, Test{{.ElementName}}1), {{.SliceType}}{}.Insert(0, Test{{.ElementName}}1)},
+		{"empty vs retain1", nil, {{.SliceType}}{}.Retain(1), {{.SliceType}}{}.Retain(1)},
+		{"empty vs delete1", nil, {{.SliceType}}{}.Delete(0, 1), {{.SliceType}}{}.Delete(0, 1)},
+		{
+			"insert1 vs insert1",
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}2),
+			{{.SliceType}}{}.Insert(1, Test{{.ElementName}}2),
+		},
+		{
+			"insert1 vs retain1",
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Retain(2),
+		},
+		{
+			"insert1 vs delete1",
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Retain(1).Delete(1),
+		},
+		{
+			"retain1 vs insert1",
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+		},
+		{
+			"retain1 vs retain1",
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Retain(1),
+		},
+		{
+			"retain1 vs delete1",
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Delete(0, 1),
+		},
+		{
+			"delete1 vs insert1",
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+			{{.SliceType}}{}.Insert(0, Test{{.ElementName}}1),
+		},
+		{
+			"delete1 vs retain1",
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Retain(1),
+			{{.SliceType}}{}.Retain(0),
+		},
+		{
+			"delete1 vs delete1",
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Delete(0, 1),
+			{{.SliceType}}{}.Retain(0),
+		},
+	} {
+		t.Run(test.N, func(t *testing.T) {
+			actual, err := test.B.Rebase(test.A)
+			if err != nil {
+				t.Error(err)
+			} else if len(actual) == 0 && len(test.Expect) == 0 {
+			} else if !reflect.DeepEqual(actual, test.Expect) {
+				t.Error("got", actual, "expected", test.Expect)
+			}
+		})
+	}
+}
